[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/package/bullets/time_bullet/time_bullet.gd" type="Script" id=1]
[ext_resource path="res://assets/graphic/bullet/turret_bullet/turret_mk1_bullet.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]
resource_name = "expanse"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1.1, 1.1 ), Vector2( 10, 10 ) ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4.05466, 4.48587 )

[node name="TimeBullet" type="Area2D"]
position = Vector2( -6.79412, -0.933964 )
scale = Vector2( 1.1, 1.1 )
collision_layer = 4
collision_mask = 17
script = ExtResource( 1 )

[node name="Lifetime" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="Tween" type="Tween" parent="."]

[node name="AnimationBullet" type="AnimationPlayer" parent="."]
anims/expanse = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.945098, 0, 1, 0.47451 )
position = Vector2( 0.101688, -0.14431 )
scale = Vector2( 1, 1.00368 )
texture = ExtResource( 2 )

[node name="BulletBody" type="CollisionShape2D" parent="."]
position = Vector2( -1.34005, 0.611746 )
shape = SubResource( 2 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( -1.28597, 0.627229 )
enabled = true
cast_to = Vector2( 4, 0 )
collide_with_areas = true
[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="timeout" from="Lifetime" to="." method="_on_Lifetime_timeout"]
